...

const PinCodeBackup: FC<Props> = props => {
  const hasUserSetPinData = useHasUserSetPinData();
  const savePinInKeyChain = useSavePinInKeyChain(props.navigation);

  return (
    <View accessibilityLabel="pinCodeBackup" style={{flex: 1}}>
      {hasUserSetPinData.isLoading ? (
        <ActivityIndicator testID="ActivityIndicator" size="large" />
      ) : hasUserSetPinData.data ? (
        <PINCode
          alphabetCharsVisible={false}
          iconButtonDeleteDisabled={true}
...
